--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -6,7 +6,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161947.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161947.md#1" target="_blank">山东村民遭绑架后次日冤死 遗体被强行火化</a><br></h3>610人员称，孙丕进是跳楼自杀，但却不让亲人仔细验尸。孙家人看到......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162070.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159652-GettyImages-1234631029-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162070.md#1" target="_blank">国际投行：疫情令大陆经济增长急速放缓</a><br></h3>目前由德尔塔毒株引起的疫情反扑已经蔓延至中国18个省，经济分析师纷......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162002.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162002.md#1" target="_blank">【一线采访】疫情蔓延 河南虞城两地封闭管理</a><br></h3>河南的中共病毒（新冠病毒、COVID-19）疫情持续蔓延。8月14......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162025.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157906-3-1-320x200.jpeg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162025.md#1" target="_blank">分析：中共防疫模式将导致巨大经济损失</a><br></h3>新冠病毒德尔塔变异株（Delta）迅速在中国扩散，中国（中共）当局......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162025.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157906-3-1-320x200.jpeg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162025.md#1" target="_blank">分析：中共防疫模式将导致巨大经济损失</a><br></h3>新冠病毒德尔塔（Delta）变异株迅速在中国扩散，中国（中共）当局......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161993.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13162013-d35abeecddcac22b25fce567368211b9-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161993.md#1" target="_blank">河南巩义农村再遭遇洪灾 民众批政府无能</a><br></h3>8月12日夜间到13日凌晨，河南郑州巩义市突发暴雨，记者14日上午......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161984.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/03/45a1518f8e73e28f064f45b0c0d61beb-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161984.md#1" target="_blank">学者：若在港实行反制裁法 过半外资银行将撤离</a><br></h3>外媒引述国际银行的高层表示，若被迫挟在中美之间，大部分外资银行都会......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161878.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/07/id13100765-2107192310212378-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161878.md#1" target="_blank">中共威胁台湾 专家：迫美准备应付最坏局面</a><br></h3>8月12日，在经过两个月的相对平静后，来自中共的战斗机集群再度入侵......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
