--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -28,9 +28,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13147959.md#1" target="_blank">【名家专栏】共产主义荼毒美国数十年</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13147959.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13147964-GettyImages-954493828-700x420-150x120.jpg" align ="left"></a>星期天晚上，我看了电视节目《生活、自由和莱文》（Life，Liberty & Levin），我的老友兼前同事，保罗·肯戈尔 (Paul Kengor) 是主持人马克·莱文的来宾。当天节目的焦点是莱文的新书《美国马克思主义》。肯戈尔是著名的冷战历史学家、马克思主义专家和多产作家。这对才华洋溢的组合，讨论到马克思主义在当今.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 3:38 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13147920.md#1" target="_blank">【名家专栏】扎克伯格、中国和脸书新世界</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13147920.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13147930-GettyImages-1182946649-1-1200x800-150x120.jpg" align ="left"></a>科技记者凯特?卡德尔（Cate Cadell）指出，在2014年，当30岁的马克?扎克伯格（Mark Zuckerberg）同意，在清华大学举办的一场活动上用中文进行问答，“让互联网陷入疯狂”。卡德尔补充说，这场演讲“褒贬不一”，一些人很快就称赞扎克伯格的“支持”，与此同时，另一些人则批评他“发音不准”和糟糕的语法。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 1:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13148179.md#1" target="_blank">岳山：七常委北戴河度假 七旬老妇四处“扑火”</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13148179.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/9dcaf99dd390fa17dc951dc2aafdfb30-150x120.jpg" align ="left"></a>中共高层自7月31日之后全部隐身，北戴河当地火车站及高速公路严查死守，这表明北戴河会议，至少是所谓“休假”，早已经开始。截至8月8日，习近平等七常委已经“消失”超过一周，北戴河仍无消息传来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 1:24 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13148242.md#1" target="_blank">颜丹：暴力“防疫”凸显中共的黑社会本质</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/8/n13148242.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13148256-f05c94b83d346a8fbbd1ee5bd1f2de40-600x400-150x120.jpg" align ="left"></a>几日前，安徽含山县社区工作人员“查处补课场所”的视频在网络上引起了极大的关注。当不少中国人都在感慨“好大的官威”、质疑“抓防疫就可以用暴力”时，中共官媒却在想方设法给当地政府先声夺人、自我辩解的机会。
-
-8月8日，含山县政府在官媒上贴出了一份“情况通报”，声称视频中那位被社区人员掐着脖子、强拉硬拽拖出教室训斥的培训.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 1:03 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/10/n13151095.md#1" target="_blank">陈思敏：中共提速职业教育却漠视职校生权益</a><br></h3>当前中共政府高调要为中小学生减负，但却漠视职校学生长久以来被以实习之名的强迫劳动等问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 11:55 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/9/n13150749.md#1" target="_blank">理悟：党妈送儿入鬼乡</a><br></h3>
 
 末法末劫乱世中，毁灭人类红魔狂。
