--- a/gb/nf5773_2.md
+++ b/gb/nf5773_2.md
@@ -16,6 +16,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/23/n13043066.md#1" target="_blank">湖北前省长王晓东转任政协闲职 命运引猜测</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/23/n13043066.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043139-05eceda4c2b83647339c573637c77679-150x120.jpg" align ="left"></a>正值全球聚焦武汉病毒所泄漏以及中共隐瞒疫情之际，中共当局宣布湖北前省长王晓东转任政协闲职。此前，湖北官场曾因疫情震荡，大批官员落马，其中包括王晓东的时任“大管家”别必雄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 12:17 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/21/n13037727.md#1" target="_blank">宁波黑人外教奸杀女生事件 胡锡进言论惹议</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/21/n13037727.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037817-eb7a0e61efe082a335087121fdb1e12d-150x120.png" align ="left"></a>宁波工程学院一名黑人外教因求爱被拒，近日将该校23岁的女大学生残忍杀害，女生家属求诉无门并遭当局打压。该事件持续发酵，不少大陆人士发视频声援，亦有中共毛派代表人物发文指责当局“把学校变成妓院”。而中共喉舌胡锡进却“火上浇油”，遭到网民炮轰。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 9:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/21/n13035669.md#1" target="_blank">拜登爱犬去世 蔡英文留言令中共喉舌炸锅</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/21/n13035669.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/50941375312_4e615bd281_o-150x120.jpg" align ="left"></a>美国总统拜登（Joe Biden）的爱犬离世后，引来不少网民关注和留言，而同样喜爱宠物的台湾总统蔡英文的留言，却引发中共喉舌的猛烈攻击。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 10:43 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/14/n13087688.md#1" target="_blank">河南两司法监狱系统高官落马 曾迫害法轮功</a><br></h3>7月14日，中共河南省司法厅前厅长、党委书记王文海，以及他的下属、河南省监狱管理局前副局长、党委委员毛克章及均涉嫌“严重违纪违法”，目前正接受调查。此外，两人因迫害法轮功，均被海外“追查迫害法轮功国际组织”（下称“追查国际”）列入追查名单。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月14日 2:12 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/14/n13087456.md#1" target="_blank">青海公安厅前副厅长任三动贪腐细节曝光</a><br></h3>中共青海省公安厅党委前副书记、副厅长任三动已被判刑7年。7月14日，陆媒披露了任三动的贪腐细节：细水长流式收礼、记不清收了多少人多少钱，他赚得盆满钵满。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月14日 12:26 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/14/n13087345.md#1" target="_blank">薄熙来大秘徐鸣被查 背后关系保不了他了？</a><br></h3>日前，中共前国家粮食局党组成员、副局长徐鸣被宣布落马。其曾担任重庆市委前书记薄熙来的大秘。有分析认为，在薄熙来垮台后，他能全身而退，其背后的关系应非同小可。如今中共搞“倒查20年”运动，很多退休的官员可能“惶惶不可终日”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月14日 11:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/13/n13085783.md#1" target="_blank">前国家粮食局副局长及北大荒粮食集团董事长被查</a><br></h3>7月13日，中共前国家粮食局党组成员、副局长徐鸣及北大荒粮食集团有限公司前党委书记、董事长史中华均涉嫌“严重违纪违法”，目前正接受调查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月13日 6:21 PM							</td></tr>
@@ -36,6 +37,5 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/19/n13032886.md#1" target="_blank">小官巨贪 内蒙古一煤炭局官员敛财超2亿</a><br></h3>中共官场“小官巨贪”的丑闻频曝光。6月18日，中共内蒙古鄂尔多斯市煤炭局前党委书记、局长郭成信“受贿、巨额财产来源不明案”开庭审理。郭成信被指控受贿9000余万元（人民币，下同），并有1.1亿余元不能说明来源。
 
 郭成信被指利用职务上的便利，为他人谋取利益，收受款物合计9033.3922万元，数额特别巨大，应以“受贿罪”追究其刑责。另外，郭成信家庭财产、.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 5:41 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/6/18/n13030911.md#1" target="_blank">辽宁银保监局官员刘文义被双开 受贿金额巨大</a><br></h3>6月18日，中共银保监会辽宁监管局二级巡视员刘文义被“双开”。其被指受贿金额巨大，通过民间借贷获取大额回报等罪名。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 7:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ycpube385/djy/blob/master/gb/nf5773_2.md#1<br><a href="https://github.com/ycpube385/djy/blob/master/gb/nf5773_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ycpube385/djy/blob/master/gb/nf5773_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf5773_2.htm">https://www.epochtimes.com/gb/nf5773_2.htm</a>    （国内需<a href="https://github.com/ycpube385/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
