--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -2,7 +2,9 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/24/n13112876.md#1" target="_blank">音乐来自天上？北宋寒士梦游广寒宫</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/24/n13112876.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13115183-394047680765e12f8c3c306f467608b3-320x200.jpg" align ="left"></a>北宋时期，有一位寒士也与月宫有缘，三做奇梦，得知人间的天籁之音，原来是来自天上啊。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 4:07 PM	</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162305.md#1" target="_blank">新诗：永不消逝的季节</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162305.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13162313-autumn_leaf_river-600-150x120.jpg" align ="left"></a>秋叶轻飘飘地下落兮
 朝着河面窃窃私语??他们
-热吻着就要消失的季节的歌声......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 10:33 PM			</td></tr>
+热吻着就要消失的季节的歌声......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 11:23 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162527.md#1" target="_blank">新诗：枯叶</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162527.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13162531-landscape-992330_640-150x120.jpg" align ="left"></a>拾起一叶枯萎 曾经青翠的深邃 已把烦心覆盖 背负的凡尘絮语 归回大地......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 11:21 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162486.md#1" target="_blank">石头故乡交响曲──我家的石围墙</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162486.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13162487-stone-150x120.jpg" align ="left"></a>一大早，太阳还没出来，小女孩被喊醒，睡眼惺忪中，一边揉着眼，一边拖着僵困的身子径自向天井（院子，闽南语）走来，坐在仍露湿的石头上，微微有点晨风吹拂而来，轻掠过她尚未完全睁开眼的脸庞。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 10:55 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161151.md#1" target="_blank">【古韵流芳】秦观《鹊桥仙》凄美的七夕词</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161151.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161162-0308fb864d159924bb14b062ccb21344-150x120.jpg" align ="left"></a>一年一度七夕节，牛郎织女来相会。古时候，七夕又叫乞巧节，是女子们祈求提高女红技艺的节日。或许是牛郎织女的故事太感人了，很多文人喜欢在诗词中感??叹他们的悲欢离合。今天的人们，更是把七夕过成了“情人节”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 10:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/4/23/n12899456.md#1" target="_blank">【命理】妇人虐死继子 自己儿子遭报应</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/4/23/n12899456.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13111792-aa4d40bc1d175766b7ddc62ae9b518ff-150x120.jpg" align ="left"></a>铁杵六岁时，他开始有病了，身体疼痛，肚子胀大，喘不上气来吃不下饭。他被打的地方呈青黑色，是他家来的鬼作祟，为什么这样对他呢？其实是有因由的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 9:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160878.md#1" target="_blank">诗歌：星</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160878.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/1603202038452483-600x400-150x120.jpg" align ="left"></a> 十百千万亿兆星 苍穹满满是眼睛 一眨不眨观尘世 善恶正邪看得清......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 12:36 AM			</td></tr>
@@ -27,9 +29,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/5/26/n12976463.md#1" target="_blank">【金色种子】1997年李洪志大师的台湾行</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/5/26/n12976463.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12934664-golden-seeds-top-image-150x120.jpg" align ="left"></a>走进十二楼会议室，刘皇影看见六、七名学员已经到来，没多久又有数名学员加入，他正想问问今天的开会主题时，这时会议室的门又开了，大家抬头一看，走进来的竟是李洪志老师。“大家真的惊呆了！”刘皇影与在场的学员都瞪大了眼，不约而同的起身致敬，李老师微笑的让大家坐下，然后讲法将近一个小时，最后并宣布隔天下午将为台湾学员讲法，要大家.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 8:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/24/n13112792.md#1" target="_blank">遇奇僧授经卷 宋人死而复生 带回警世奇闻</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/24/n13112792.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/150924170814985-150x120.jpg" align ="left"></a>宋仁宗时期，有位年轻人游览寺院，遇到了一位老僧。次年，年轻人病亡，他的元神进入幽冥，却看见老僧从天而降，还带他走了一遭。原来死亡并不是生命的结束，而是又一次新的开始。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 7:35 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/31/n13130048.md#1" target="_blank">克罗索斯以亡国的代价 领悟了神谕和幸福</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/31/n13130048.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13132529-Francken_Croesus_showing_his_treasures-150x120.jpg" align ="left"></a>从国王沦为俘虏，在跌宕的命运中，克罗索斯为自己对命运的无知，对神意的不解，付出了惨重代价。他也凭着对神的信心，免遭杀身之祸。克罗索斯领悟了神谕，也明白了什么是真正的幸福。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 6:22 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/11/n13155268.md#1" target="_blank">新诗：父亲手中的一粒玉米</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/11/n13155268.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155533-sunset-241806_640-150x120.jpg" align ="left"></a>哦，父亲！我握着笔的手一直在颤抖：
-让我如何描写您、追念您？
-您与平民的母亲一样，您是那样的平凡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 12:14 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162526.md#1" target="_blank">诗歌：灭共决断时刻</a><br></h3>众生向真理，何处普天春。 民主非最好，独裁极恶深。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 11:11 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/11/n13155202.md#1" target="_blank">西江月?谁是坏人</a><br></h3>举世谁为最坏？无神论者猖狂。
 反天反地反伦常，毁掉神传希望。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160777.md#1" target="_blank">一七令?七夕</a><br></h3>牵。 岁岁，年年。 天河水，水连天。 牛郎织女，天各一边。 天天思七夕，夜夜盼团圆。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 11:08 PM			</td></tr>
@@ -39,12 +39,5 @@
 涤尘消共产。
 赤邪一日存，
 黑疫无从缓。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 12:10 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/12/n13156318.md#1" target="_blank">松街的故事之一：归不了根的落叶</a><br></h3>2011年初秋时分，母亲已是风中残烛，虚弱地躺在旧金山市松街（Pine Street）上的一间名为Kindred的疗养院病房里。
-
-母亲与松街的缘分很深，在松街与奥克塔维亚街（Octavia Street）交叉口的一栋老人公寓里，一住就是三十年，她的疗养院与公寓都在松街上，相距仅五个街口（Block）而已。自幼就有.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 9:46 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/11/n13155200.md#1" target="_blank">七律：消暑</a><br></h3>欲求消暑河边走，
-一片清凉水汽流。
-尾穗苋开垂紫穗，
-绣球花展滚蓝球。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ycpube385/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/ycpube385/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ycpube385/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/ycpube385/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
