--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -9,7 +9,7 @@
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13204751.md#1" target="_blank">网民分享真实的“蝴蝶效应”故事（下）</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13204751.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13204754-butterfly-4847628_1920-150x120.jpg" align ="left"></a>“蝴蝶效应”是一种连锁效应，意指一件小事带来巨大的变化。Reddit网站用户“TheDragonCourier”以此为话题，邀请其他用户分享其现实生活中的“蝴蝶效应”故事，以下摘译其中一些案例：......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 4:55 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/1/n13202316.md#1" target="_blank">正确“抱狗”训练 调皮犬也能“稳重有礼貌”</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/1/n13202316.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13202874-shutterstock_1859036542-150x120.jpg" align ="left"></a>回到家看到热情的爱犬，总喜欢抱抱狗，摸摸狗，宠主都感到很开心。然而除了玩游戏，运动跑跳的时间以外，最好平日能让狗狗养成安定沉稳的性格，当它躁动、情绪高昂时不能抱狗或摸狗，以免产生“分离焦虑症”或衍生更多狗行为问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 4:46 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13204454.md#1" target="_blank">高龄93岁 日本麦当劳最老员工照轮夜班</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13204454.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13204458-GettyImages-461204536-150x120.jpg" align ="left"></a>全球最大速食连锁店麦当劳在日本开业已有50年。在该国2,900家分店中，最年长的员工是一名高龄93岁的老爷爷。尽管他已经白发苍苍，但他依然每周工作4天，而且能配合轮值夜班。他的勤奋与敬业精神受到人们的称赞。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 12:48 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank">改善五十肩 2动作拉开紧绷的肩关节</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203553-exercise-wushijian-9.1-150x120.jpg" align ="left"></a>五十肩的全名为“沾黏性肩关节囊炎”（Adhesive Capsulitis），因肩部关节或肌腱发生病变，使患者感到疼痛和关节活动受限。知名脊椎保健达人郑云龙推荐3大动作，能够很舒服的伸展，拉开沾黏的肩关节和紧绷的筋膜。有一动作对肩关节很好，同时能检测肩关节活动度。还有动作能改善驼背，避免影响肩关节出现粘黏。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 6:07 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank">改善五十肩 2个简单动作拉开肩关节沾黏</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203553-exercise-wushijian-9.1-150x120.jpg" align ="left"></a>五十肩的全名为“沾黏性肩关节囊炎”（Adhesive Capsulitis），因肩部关节或肌腱发生病变，使患者感到疼痛和关节活动受限。知名脊椎保健达人郑云龙推荐3大动作，能够很舒服的伸展，拉开沾黏的肩关节和紧绷的筋膜。有一动作对肩关节很好，同时能检测肩关节活动度。还有动作能改善驼背，避免影响肩关节出现粘黏。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 6:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/1/n13202814.md#1" target="_blank">初创公司如何招聘和评估人才</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/1/n13202814.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13202948-Job-seekers-hiring-700x420-150x120.jpeg" align ="left"></a>当没人了解你的公司时，为初创公司招聘更像是一门艺术而不是科学。随着公司和业务的发展，你如何做出正确的招聘决定？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月02日 12:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/28/n13194389.md#1" target="_blank">增强记忆力的7类食物</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/28/n13194389.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13194427-shutterstock_1803314947-150x120.jpg" align ="left"></a>明明可以一次办完的事，却因忘东忘西，而花了更多时间。上述情境是否很常出现？在忙碌的生活中，若又有“健忘”来搅局，多少会让人感到沮丧，自嘲健忘程度不亚于老人。营养师简子匀指出，记忆变差的原因，除了自然老化之外，还与生活习惯有关。除了调整生活作息、改变饮食习惯，还能吃7类食物补充大脑所需的营养素来提升记忆力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 11:44 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13200194.md#1" target="_blank">巧妙设计 打造超级实用的家庭小杂物间</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13200194.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13200260-shutterstock_2007646409-150x120.jpg" align ="left"></a>家里有一个地方常被人忽视，但又是最实用的一个房间，那就是杂物间。有一些东西我们平时用不到，但是丢掉又觉得可惜，所以杂物间就有了用武之地。杂物间的设计是讲究技巧的，这样才能收纳更多东西。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 11:40 PM			</td></tr>
