--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -18,9 +18,7 @@
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13200605.md#1" target="_blank">浮生行吟：读书笔记7《戒糖》小故事</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/31/n13200605.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/03/candy-150x120.jpg" align ="left"></a>其实，无论是教育孩子，还是为人处事，道理都是一样的。别忘了：一般的做法是用语言去命令别人，更好的方式是用行动去影响别人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月31日 10:50 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/27/n13191066.md#1" target="_blank">古人最常用的化妆品是什么？</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/27/n13191066.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13101270-36196ca5661ff21fc29c87f04dc83d27-150x120.jpg" align ="left"></a>古人用什么化妆品呢？先来认识“粉黛”，这是历代最基础的基础化妆品，在中华文化中起源久远，历代又有什么改良呢？听过吗，“ 画眉”不仅引领美容时尚，也能为文名开路！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月31日 7:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/26/n13188250.md#1" target="_blank">《夷坚志》记载的三件神奇器物</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/26/n13188250.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191928-PSB5B000101N000000000PAB-150x120.jpg" align ="left"></a>南宋名臣洪迈（1123年—1202年）耗用多年，编撰了笔记合集《夷坚志》，收录了许多他听闻的神奇轶事。其中，他记载了三件神奇器物，用现代科学也难以解释。通常烤肉需要很大热量，但将食物投入铜铫后，用一张纸捻就可以很快把肉烤得熟烂；古代没有冰柜冰箱，但用铁甑煮食，可保持一个月都不腐坏；金国皇帝完颜亮有一块镇国奇石，又有着怎.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月31日 6:59 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/3/n13206840.md#1" target="_blank">松街的故事之三：从一张青岛女中1935年的老照片谈起</a><br></h3>前几个月，母亲生前挚友陆素影的孙辈，自大陆寄来一张当年青岛女中游泳队的老照片，这是我手中现存，年代最久远的母亲之照片（应该是摄于1935年左右）。
-
-照片的品质不佳，初见之下，我无从确认那一位是我母亲。好在我那已年逾九旬，母亲之同母异父的幼妹刘平梅尚在北京（梅姨与姨爹俩，都是清华大学的退休教授），经她老人家指认，我.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 9:51 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/30/n13198167.md#1" target="_blank">诗歌：农家</a><br></h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/8/30/n13198167.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/07/cucumbers--150x120.jpg" align ="left"></a> 踏秋进农家 摘根小黄瓜 抬头硕果重 跌下乐开花......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月31日 12:56 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205928.md#1" target="_blank">诗歌：夜渡</a><br></h3>一天烟雨始来秋， 千里江风逐自由。 四季时轮空百度， 三峡崖壁夜莺啾！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:25 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205929.md#1" target="_blank">七绝：贴神韵海报</a><br></h3>扑面金风心气爽  走街串店不沾尘  张张海报墙窗贴  天地颜新主客亲......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 12:57 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13204464.md#1" target="_blank">读“建中”的那一年</a><br></h3>
