--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -24,6 +24,7 @@
 <h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/30/n13196778.md#1" target="_blank">痛风年轻化有一大原因 中医推荐快速缓解食物</a><br></h3>
 <h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/30/n13197965.md#1" target="_blank">肌肉少易得糖尿病！医师：控血糖最有效的运动</a><br></h3>
 <h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank">改善五十肩 2个简单动作拉开肩关节沾黏</a><br></h3>
+<h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13201822.md#1" target="_blank">新研究揭最佳睡眠时间 预防失智、忧郁症</a><br></h3>
 <h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13202796.md#1" target="_blank">【直播】打疫苗感染风险 高于二次感染13倍？</a><br></h3>
 <h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank">【重播】迄今最强变种出现？C12变种危险吗</a><br></h3>
 <tr><td><h3><a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wzyhai300/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
