--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -9,7 +9,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207511.md#1" target="_blank">美国鳄鱼一口咬下空拍机 嘴巴冒出浓烟</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207511.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13207517-drone-1112752_1920-150x120.jpg" align ="left"></a>网上流传的一段短片显示，当一架空拍机在美国佛罗里达州的一只鳄鱼上方盘旋时，那只鳄鱼突然张口将它咬下，这一幕让拍摄者看傻了眼。而当鳄鱼在啃咬空拍机时，其口中冒出阵阵白烟，也让人看得目瞪口呆。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 4:24 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201822.md#1" target="_blank">远离失智、忧郁症！研究揭最佳睡眠时间</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201822.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203389-shutterstock_1942221322-150x120.jpg" align ="left"></a>一天都睡几小时？一项新研究指出，太短或太长的睡眠时间都不利大脑的健康，不仅会增加失智症的风险，还会涉及不同的潜在疾病病程，如更高的体重、抑郁症状等。睡眠时间太长也与多个认知领域表现较差相关。台中林新医院脑神经内科主治医师林志豪指出：“睡眠对大脑的影响不是只有时间长短而已，还包括睡眠品质好不好，这也是有差别的。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 2:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207155.md#1" target="_blank">飓风艾达横扫美国路州后 一头牛卡在树上</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207155.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13207164-cow-stuck-on-the-tree-150x120.jpg" align ="left"></a>强度达4级的飓风艾达（Ida）近日横扫美国路易斯安那州，导致水灾和百万户断电等灾情，就连平常不会爬树的牛，竟然也会卡在树上。有网友戏称，能看到这种奇景，活得也算够久了。如果哪天看到猪在天上飞，那就该走了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:21 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206084.md#1" target="_blank">吊坠饰品配搭技巧（混搭篇）</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206084.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206604-2777scr_4fe5543940830de-150x120.jpeg" align ="left"></a>吊坠，又称坠饰、垂饰，神韵小商品推出吊坠饰品系列：项链吊坠及手链、耳环吊坠。神韵小商品融合传统风格与时尚品味之美，推出9款小巧而精致的吊坠。这些吊坠可以互相搭配，不同款式的吊坠可以与手链、耳环或项链随心意自由搭配，秒变为项链吊坠、耳坠与手链吊坠，变化出适用于不同场合的造型，展现独一无二的个性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:14 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206084.md#1" target="_blank">展现柔雅气质 吊坠饰品配搭技巧（混搭篇）</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206084.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206604-2777scr_4fe5543940830de-150x120.jpeg" align ="left"></a>吊坠，又称坠饰、垂饰，神韵小商品推出吊坠饰品系列：项链吊坠及手链、耳环吊坠。神韵小商品融合传统风格与时尚品味之美，推出9款小巧而精致的吊坠。这些吊坠可以互相搭配，不同款式的吊坠可以与手链、耳环或项链随心意自由搭配，秒变为项链吊坠、耳坠与手链吊坠，变化出适用于不同场合的造型，展现独一无二的个性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 1:14 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200667.md#1" target="_blank">做事效率低？5策略助你翻转工作困境</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200667.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/11/1503241317132483-150x120.jpg" align ="left"></a>为什么埋头苦干还是无法改善被工作追着跑的现象？是时间不够吗？事情太多吗？哥伦比亚大学心理学博士乔许．戴维斯经研究，他提出5项有效改善工作效率且容易执行的策略；他发现要拥有高的生产力和创造力，是需要抛开常见的“效率迷思与工作模式”，倾听自己身体的声音，如此才能达到工作与生活都能双赢。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 8:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205270.md#1" target="_blank">充满童年怀旧情结的冰淇淋蛋糕</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205270.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205377-entree-ice-cream-cake-20210816-150x120.jpg" align ="left"></a>如果你童年最喜欢的食物包括：包装好的零食蛋糕——魔鬼狗（Devil Dogs）、约德尔蛋糕（Yodels）、瑞士卷（Swiss Rolls）等，以及从商店买的冰淇淋蛋糕——巴斯金·罗宾斯（Baskin-Robbins）的薄荷巧克力蛋糕，我保证这个充满冰淇淋的瑞士卷蛋糕会让你感到惊喜。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 4:44 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank">【重播】迄今最强变种出现？C12变种危险吗</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205327-9.2.21-web-Health-Live-150x120.jpg" align ="left"></a>迄今突变最严重的变种病毒出现！C.1.2变种比Delta变种更强？
@@ -49,7 +49,7 @@ Ramon吴表示，华人都非常喜欢样板屋，但.........<br><img align="bo
 
 Realtor.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 1:07 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201911.md#1" target="_blank">英国游客过世 留遗产给土耳其旅馆服务生</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201911.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201915-currency-1205892_1920-150x120.jpg" align ="left"></a>英国一名男子每年都会到土耳其度假，因而结识了一家旅馆的工作人员。在该名男子过世后，他的家人发现他在遗嘱中要求将部分遗产留给该旅馆的一名服务生，这让对方大感震惊。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 12:45 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199525.md#1" target="_blank">杂草变药草！自制蒲公英茶助消化、增强免疫力</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199525.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13200537-shutterstock_468111044-150x120.jpg" align ="left"></a>生命力旺盛的蒲公英被视为除不尽的杂草，真的名不符其实。在民俗疗法中，它们有很多功效：助消化、强化免疫力、降血压、抗发炎、减轻水肿等。整株蒲公英都可以泡茶，包括根、叶和花朵三部分，风味迥异且独特。以蒲公英茶为基底，加入各种风味的调料，像是柠檬、姜、莱姆、香草、薰衣草等，可变化出多种口感的蒲公英茶饮。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 10:24 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199525.md#1" target="_blank">杂草变药草 自制蒲公英茶助消化、增强免疫力</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199525.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13200537-shutterstock_468111044-150x120.jpg" align ="left"></a>生命力旺盛的蒲公英被视为除不尽的杂草，真的名不符其实。在民俗疗法中，它们有很多功效：助消化、强化免疫力、降血压、抗发炎、减轻水肿等。整株蒲公英都可以泡茶，包括根、叶和花朵三部分，风味迥异且独特。以蒲公英茶为基底，加入各种风味的调料，像是柠檬、姜、莱姆、香草、薰衣草等，可变化出多种口感的蒲公英茶饮。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 10:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13198878.md#1" target="_blank">糖果饭卷：零门槛 好吃又好玩的造型饭卷</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13198878.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13199247-P.120-1-150x120.jpg" align ="left"></a>造型饭卷零门槛又有趣，以米饭和海苔的堆叠组合，搭配天然材料渲染出各种色彩，就能组合出各式各样可爱造型的饭卷。今天就来介绍一款让人一想就甜蜜蜜的糖果饭卷。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 10:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13197965.md#1" target="_blank">肌肉少易得糖尿病！医师：控血糖最有效的运动</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13197965.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13198950-shutterstock_1403414078-150x120.jpg" align ="left"></a>别小看肌肉流失，这不仅会让人体力变差，还可能导致糖尿病。肌肉量与新陈代谢中的蛋白质储存、血糖调整息息相关，研究显示肌少症与糖尿病、代谢症候群有相关性。肌肉流失与老化、疾病、营养不良或久坐不喜运动等原因有关。50岁以后，肌肉流失的速度加快，到了70岁，肌肉只剩下年轻时的一半。要控制血糖，就要运动增肌。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 6:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
